[project]
name = "what-am-i"
version = "0.1.0"
description = ""
authors = [
    {name = "Elisei Kambalin",email = "erberum@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
runserver = ""
