[project]
name = "what-am-i"
version = "0.1.0"
description = ""
authors = [
    { name = "Elisei Kambalin", email = "erberum@gmail.com" }
]
readme = "README.md"
requires-python = ">3.9.0,<3.9.1 || >3.9.1"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
runserver = "poetry run fastapi dev main.py"
